Fri May 15 05:34:00 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Another update for 1.2.21.

Fri May 15 05:05:32 GMT 2015  Olly Betts <olly@survex.com>

	* README: Add note about Python 3 support.

Fri May 15 04:54:37 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.21.

Thu May 14 13:57:00 GMT 2015  Olly Betts <olly@survex.com>

	* README: Remove the experimental marker from the Lua bindings.

Thu May 14 12:40:57 GMT 2015  Olly Betts <olly@survex.com>

	* README: Remove note about the subclassing bug with PHP 5.4 and later
	  - that was fixed in 1.2.19.

Thu May 14 12:07:03 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Update list of unwrapped things.

Thu May 14 11:47:46 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Perl tests are ordering-dependent, so
	  use .NOTPARALLEL to avoid problems during parallel builds.

Thu May 14 11:28:19 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/collapse.t: Add test coverage for
	  Enquire::set_collapse_key() with 1 and 2 parameters.

Thu May 14 11:25:44 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/stem.t: Add test that we can create all the
	  stemmers returned by Stem::get_available_languages().

Thu May 14 11:17:54 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/,perl/docs/examples/,
	  perl/generate-perl-exceptions,perl/t/databasemodified.t,
	  perl/t/search.t,perl/t/writabledatabase.t,perl/util.i.in: Whitespace
	  clean-up.

Thu May 14 10:57:31 GMT 2015  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Remove superfluous ';' after closing
	  '}' of namespace.

Thu May 14 10:52:53 GMT 2015  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Use croak_sv() or ERRSV if defined.

Thu May 14 10:32:12 GMT 2015  Olly Betts <olly@survex.com>

	* lua/generate-lua-exceptions,perl/generate-perl-exceptions,
	  python/generate-python-exceptions: Have a single copyright statement